--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -114,8 +114,8 @@
 										<tr ng-repeat="pay in paymentAllData">
 											<td style="width: 5%; text-align: center; height: 47px;">{{ ($index + 1) + '. ' }}</td>
 											<td style="width: 30%; text-align: left; height: 47px;">
-												<i class="fa fa-fw" ng-class="{'fa-user-o customer': pay.isCustomer, 'fa-user-circle-o admin': !pay.isCustomer}"></i>
-												{{ pay.name }}</td>
+												<i class="fa fa-fw" ng-class="{'fa-user-o customer': pay.isCustomer, 'fa-user-circle-o admin': !pay.isCustomer}"></i> {{ pay.name }}
+											</td>
 											<td style="width: 20%; text-align: right; height: 47px;">{{ pay.sum | number:2 }}</td>
 											<td style="width: 25%; text-align: center; height: 47px;">
 												<div class="form-group input-group input-sm" style="margin-bottom: 0; padding: 0;">
