--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -6,7 +6,7 @@
 	color: #55c655;
 }
 .customer {
-	color: #ff9b0d;
+	color: #ecc73f;
 }
 
 /* Table header fixed schroll */
@@ -63,7 +63,7 @@
                 	
                 	<div class="row">
                 		<div class="col-md-4">
-		                	<div class="form-group input-group" style="margin-top: 2px;">
+		                	<div class="form-group input-group">
 			                	<span class="input-group-addon">งวดที่</span>
 						      	<select class="form-control" ng-model="formData.period" ng-options="option._id as option.periodDateTime | date:'dd/MM/yyyy' for option in periods" ng-change="changePeriod()"></select>
 						    </div>
@@ -71,8 +71,8 @@
                 	
                 		<div class="col-md-8">
 		                	<ul class="nav nav-tabs tabh-style" style="font-size: 12px; background-color: #2C2B2B; border-radius: 5px;">
-			                     <li ng-class="{'active': tabActived == 0}" ng-click="changeTab(0)"><a href="" data-toggle="tab">สรุปรวม</a></li>
-			                     <li ng-class="{'active': tabActived == 1}" ng-click="changeTab(1)"><a href="" data-toggle="tab">สรุปรายบุคคล</a></li>
+			                     <li ng-class="{'active': tabActived == 0}" ng-click="changeTab(0)"><a href="" data-toggle="tab" style="padding: 8px 15px;">สรุปรวม</a></li>
+			                     <li ng-class="{'active': tabActived == 1}" ng-click="changeTab(1)"><a href="" data-toggle="tab" style="padding: 8px 15px;">สรุปรายบุคคล</a></li>
 							</ul>
                 		</div>
                 	</div>
