--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -95,7 +95,7 @@
 			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ส่วนลดรวม</span>
 			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ sumDiscount1 | number:2 }}</span>
 			                	
-			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ยอดซื้อรวมสุทธิ</span>
+			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ยอดซื้อสุทธิ</span>
 			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ sum1 - sumDiscount1 | number:2 }}</span>
 							</div>
 							
