--- a/backend/src/main/webapp/app/views/dms/customer/main.html
+++ b/backend/src/main/webapp/app/views/dms/customer/main.html
@@ -12,9 +12,9 @@
         <div class="col-md-12">
             <div class="panel gambler-panel">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
+                    <i class="fa fa-list-alt fa-fw"></i> {{ main.headerTitle }}
                     <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
-                    	<i class="fa" ng-class="iconBtn"></i>
+                    	<i class="fa" ng-class="main.iconBtn"></i>
                     </button>
                 </div>
                 <div class="panel-body" style="padding: 3px;">
