--- a/backend/src/main/webapp/app/views/dms/customer/search.html
+++ b/backend/src/main/webapp/app/views/dms/customer/search.html
@@ -68,14 +68,14 @@
 				<td>{{ u.createdDateTime | date : 'dd/MM/yyyy hh:mm' }}</td>
 				<td>{{ u.companyName }}</td>
 				<td>{{ u.comCode }}</td>
-				<td>{{ u.package }}</td>
+				<td>{{ u.package == 1 ? 'เช่า' : 'ซื้อขาด' }}</td>
 				<td>
 					<i class="fa fa-check-circle fa-lg" ng-show="u.enabled" title="เปิด"></i>
 					<i class="fa  fa-minus-circle fa-lg" ng-hide="u.enabled" title="ปิด"></i>
 				</td>
 				<td>
-					<i class="fa fa-times fa-lg" ng-click="deleteUser(u.id)"></i>&emsp;
-					<i class="fa fa-edit fa-lg" ng-click="editUser(u)"></i>
+					<i class="fa fa-times fa-lg" style="cursor: pointer;" ng-click="deleteUser(u.id)"></i>&emsp;
+					<i class="fa fa-edit fa-lg" style="cursor: pointer;" ng-click="editUser(u)"></i>
 				</td>
 			</tr>
 		</tbody>
