--- a/backend/src/main/webapp/app/views/dms/customer/add.html
+++ b/backend/src/main/webapp/app/views/dms/customer/add.html
@@ -26,86 +26,94 @@
 		<div class="col-md-6">
 			<div class="row">
 				<div class="col-md-6">
-					<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
-						<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
-						<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
-							<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
-						</span>
-						<input name="userNameShow" class="form-control" ng-model="user.showname" ng-change="existingUserShowErrMsg = null" required>
+					<div class="form-group input-group-sm">
+						<label class="control-label">Name</label>
+						<input name="lastName" class="form-control" ng-model="formData.companyName" autocomplete="none">
 					</div>
-					<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
-						<label class="control-label">{{'user.addpage.username' | translate}} *</label>
-						<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-							<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
-						</span>
-						<input name="userName" class="form-control" ng-model="user.username" ng-change="existingUserErrMsg = null" required>
+					<div class="form-group input-group-sm">
+						<label class="control-label">TAX ID.</label>
+						<input name="lastName" class="form-control" ng-model="user.lastName" autocomplete="none">
 					</div>
-					<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
-						<label class="control-label">{{'user.addpage.password' | translate}} *</label>
-						<input name="password" class="form-control" type="password" ng-model="user.password" ng-required="!isEdit">
+					<div class="form-group input-group-sm">
+						<label class="control-label">Com.Code</label>
+						<input name="lastName" class="form-control" ng-model="formData.comCode" autocomplete="none">
 					</div>
-					<div class="form-group" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
-						<label class="control-label">{{'user.addpage.re_type_password' | translate}} *</label>
-						<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
-							<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
-						</span>
-						<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
-						       ng-change="notMatchRepassErrMsg = null" ng-required="!isEdit">
-					</div>
-					<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
-						<label class="control-label">สิทธิ์ *</label>
-						<select name="roles" class="form-control" ng-model="user.authorities[0].authority" ng-change="authoritySelected()" required>
-							<option value="">--เลือกสิทธิ์--</option>
-					      	<option ng-selected="{{ user.authorities[0].authority == option.authority }}" 
-					      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
-					    </select>
+					<div class="form-group input-group-sm" ng-class="{'has-error':addUserForm.roles.$invalid}">
+						<label class="control-label">Package</label>
+						<select class="form-control" ng-model="formData.package" ng-options="option.id as option.name for option in packages"></select>
 					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
-						<label class="control-label">ชื่อ</label>
-						<div class="input-group">
-							<div class="input-group-btn">
-						        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ titleShow }} <span class="caret"></span></button>
-						        <ul class="dropdown-menu">
-						          <li ng-repeat="t in nameTitles"><a href="" ng-click="changeTitle(t)">{{ t }}</a></li>
-						        </ul>
-							</div>						
-							<input name="firstName" class="form-control" ng-model="user.firstName">
-						</div>
+					<div class="form-group input-group-sm">
+						<label class="control-label">Address</label>
+						<textarea name="lastName" class="form-control" ng-model="user.lastName" style="resize: vertical; height: 100px;" autocomplete="none"></textarea>
 					</div>
-					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
-						<label class="control-label">สกุล</label>
-						<input name="lastName" class="form-control" ng-model="user.lastName">
+					<div class="form-group input-group-sm">
+						<label class="control-label">Email</label>
+						<input type="email" name="lastName" class="form-control" ng-model="user.lastName">
 					</div>
-					<div class="form-group" ng-show="workingOnDealer.id">
-						<label class="control-label">Line User ID</label>
-						<span class="text-danger" ng-show="existingLineUserErrMsg" style="position: absolute; right: 0px;">
-							<i class='fa fa-warning fa-fw'></i><em>{{ existingLineUserErrMsg }}</em>
-						</span>
-						<input name="lastName" class="form-control" ng-model="user.lineUserId">
+					<div class="form-group input-group-sm">
+						<label class="control-label">Tel.</label>
+						<input type="email" name="lastName" class="form-control" ng-model="user.lastName">
 					</div>
-					<div class="form-group">
-		                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
-		                 <label class="radio-inline">
-		                     <input type="radio" name="userStatus" value="true" ng-checked="user.enabled == true" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
-		                 </label>
-		                 <label class="radio-inline">
-		                     <input type="radio" name="userStatus" value="false" ng-checked="user.enabled == false" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
-		                 </label>
-		             </div>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-2">
-			<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">		
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<div style="text-align: center;">
-					<button type="button" class="btn btn-outline btn-default" ng-click="clear()">Clear</button>
-					<button type="submit" class="btn btn-outline btn-info" ng-disabled="addUserForm.$invalid">Save</button>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="form-group input-group-sm">
+						<label class="control-label">Paid NO.</label>
+						<input name="lastName" class="form-control" ng-model="user.lastName" autocomplete="none">
+					</div>
+					<div class="form-group">
+		                 <label>Status &nbsp;&nbsp;</label>
+		                 <label class="radio-inline">
+		                     <input type="radio" name="status" value="true" ng-checked="formData.enabled == true" ng-model="formData.enabled">Enable
+		                 </label>
+		                 <label class="radio-inline">
+		                     <input type="radio" name="status" value="false" ng-checked="formData.enabled == false" ng-model="formData.enabled">Disable
+		                 </label>
+		            </div>
+		            <div style="text-align: center;">
+						<button type="submit" class="btn btn-outline btn-info" ng-disabled="addUserForm.$invalid">Save</button>
+					</div>
 				</div>
 			</div>
 		</div>
 </form>
+
+
+<div class="row">
+	<div class="col-md-12">
+		<div class="table-responsive">	
+			<table class="table table-striped table-hover gambler-panel" style="margin: 0;">
+				<thead>
+					<tr style="color: #cccccc;">
+						<th>#</th>
+						<th>Created Date</th>
+						<th>Name</th>
+						<th>Status</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="u in customers track by $index" style="background-color: #525151;">
+						<td>{{ $index + 1 }}</td>
+						<td>{{ u.createdDateTime | date : 'dd/MM/yyyy hh:mm' }}</td>
+						<td>{{ u.companyName }}</td>
+						<td>
+							<i class="fa fa-check-circle fa-lg" ng-show="u.enabled" title="เปิด"></i>
+							<i class="fa fa-minus-circle fa-lg" ng-hide="u.enabled" title="ปิด"></i>
+						</td>
+						<td>
+							<i class="fa fa-times fa-lg" ng-click="deleteUser(u.id)"></i>&emsp;
+							<i class="fa fa-edit fa-lg" ng-click="editUser(u)"></i>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+	</div>
+</div>
