--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -143,7 +143,7 @@
 	            <input type="radio" name="updateEmptyReminderDate" value="0" ng-checked="data.updateEmptyReminderDate == 0" ng-model="data.updateEmptyReminderDate">No
 	        </label>
        </div>
-       <div class="form-group">
+       <div class="form-group" ng-show="group0">
 	        <label>KrungSri API &nbsp;&nbsp;</label>
 	        <i class="fa fa-pencil-square-o fa-fx" style="cursor: pointer;" ng-click="krsApiSetting()"></i>
        </div>
