--- a/backend/src/main/webapp/app/views/dms/customer/search.html
+++ b/backend/src/main/webapp/app/views/dms/customer/search.html
@@ -72,7 +72,7 @@
 					<i class="fa  fa-minus-circle fa-lg" ng-hide="u.enabled" title="Off"></i>
 				</td>
 				<td>
-					<i class="fa fa-times fa-lg" style="cursor: pointer;" ng-click="deleteData(u.id)"></i>&emsp;
+					<i class="fa fa-times fa-lg" style="cursor: pointer;" ng-click="deleteData(u._id)"></i>&emsp;
 					<i class="fa fa-edit fa-lg" style="cursor: pointer;" ng-click="editData(u)"></i>
 				</td>
 			</tr>
